# cmd/docs/swagger.json
@@ -737,7 +737,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "Friendship"
                 ],
                 "summary": "Upload Group Pic",
                 "parameters": [
@@ -1424,7 +1424,7 @@
                 }
             }
         },
-        "/v1/user//add-email-verify": {
+        "/v1/user/add-email": {
             "post": {
                 "description": "Responds with json",
                 "consumes": [
@@ -1436,15 +1436,15 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "Send otp sent to email",
+                "summary": "Add email to user. endpoint sends otp",
                 "parameters": [
                     {
-                        "description": "valid otp",
+                        "description": "valid email",
                         "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.OtpPayload"
+                            "$ref": "#/definitions/api.EmailPayload"
                         }
                     }
                 ],
@@ -1476,7 +1476,7 @@
                 }
             }
         },
-        "/v1/user/add-email": {
+        "/v1/user/add-email-verify": {
             "post": {
                 "description": "Responds with json",
                 "consumes": [
@@ -1488,15 +1488,15 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "Add email to user. endpoint sends otp",
+                "summary": "Send otp sent to email",
                 "parameters": [
                     {
-                        "description": "valid email",
+                        "description": "valid otp",
                         "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.EmailPayload"
+                            "$ref": "#/definitions/api.OtpPayload"
                         }
                     }
                 ],
@@ -1738,9 +1738,6 @@
             "type": "object",
             "properties": {
                 "email": {
-                    "type": "string"
-                },
-                "password": {
                     "type": "string"
                 }
             }
